fixes on markup from w3c for image links spacing redondant atributes and multiple id.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="dist/assets/owl.carousel.min.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="dist/assets/owl.theme.default.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="css/inter.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="dist/assets/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="dist/assets/owl.theme.default.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/inter.css" type="text/css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62479125-10"></script>
-    <script type="text/javascript">
+    <script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
@@ -217,7 +217,7 @@
                     <a href="#">
                         <div class="socialMedia">
 
-                            <img src="img/icons8-instagram-filled-100 (1).png" alt="instagram filled icon">
+                            <img src="img/icons8-instagram-filled-100(1).png" alt="instagram filled icon">
                             <p class="roundedBorders">14 услуг</p>
                         </div>
                     </a>
@@ -388,8 +388,7 @@
 
                         <div class="item">
                             <div class="cardWithImages card__hover">
-                                <img src="img/likes.jpg" alt="Комментарии" title="Комментарии" width="299px"
-                                    height="120px">
+                                <img src="img/likes.jpg" alt="Комментарии" title="Комментарии" />
                                 <hr>
                                 <div class="contained-text">
                                     <h3>Комментарии</h3>
@@ -403,7 +402,7 @@
                                     <svg class="icon" viewBox="0 0 250 100" version="1.1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <defs>
-                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-8">
+                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-9">
                                                 <stop stop-color="#BC8CCD" offset="0%"></stop>
                                                 <stop stop-color="#72A5BA" offset="100%"></stop>
                                             </linearGradient>
@@ -433,7 +432,7 @@
                                     <svg class="icon" viewBox="0 0 250 100" version="1.1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <defs>
-                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-8">
+                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-10">
                                                 <stop stop-color="#BC8CCD" offset="0%"></stop>
                                                 <stop stop-color="#72A5BA" offset="100%"></stop>
                                             </linearGradient>
@@ -462,7 +461,7 @@
                                     <svg class="icon" viewBox="0 0 250 100" version="1.1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <defs>
-                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-8">
+                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-11">
                                                 <stop stop-color="#BC8CCD" offset="0%"></stop>
                                                 <stop stop-color="#72A5BA" offset="100%"></stop>
                                             </linearGradient>
@@ -491,7 +490,7 @@
                                     <svg class="icon" viewBox="0 0 250 100" version="1.1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <defs>
-                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-8">
+                                            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-12">
                                                 <stop stop-color="#BC8CCD" offset="0%"></stop>
                                                 <stop stop-color="#72A5BA" offset="100%"></stop>
                                             </linearGradient>
@@ -539,7 +538,7 @@
 
                     <div class="supportOptionsItem">
 
-                        <img src="img/Group 2.png" alt="Viber icon in circle">
+                        <img src="img/Group2.png" alt="Viber icon in circle">
                         <h5>Viber</h5>
                         <p>Получите консультацию через одно из самых популярных приложений</p>
 
@@ -553,7 +552,7 @@
                     </div>
                     <hr>
                     <div class="supportOptionsItem">
-                        <img src="img/Group 3.png" alt="Binder icon in circle">
+                        <img src="img/Group3.png" alt="Binder icon in circle">
                         <h5>FAQ</h5>
                         <p>База самых распространенны х вопросов по работе с сервисом</p>
 
