--- a/Услуги.html
+++ b/Услуги.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="dist/assets/owl.carousel.min.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="dist/assets/owl.theme.default.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="css/inter.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="dist/assets/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="dist/assets/owl.theme.default.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/inter.css" type="text/css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62479125-10"></script>
-    <script type="text/javascript">
+    <script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
@@ -148,35 +148,35 @@
                 <div class="socials">
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-vk fa-2x"></i> -->
+
                             <img src="img/icons8-vk-circled-filled-100.png" alt="VK chat icon in circle">
                             <p class="roundedBorders">8 услуг</p>
                         </div>
                     </a>
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-youtube fa-2x"></i> -->
+
                             <img src="img/icons8-youtube-filled-100.png" alt="Youtbe filled icon">
                             <p class="roundedBorders">4 услуг</p>
                         </div>
                     </a>
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-instagram fa-2x"></i> -->
-                            <img src="img/icons8-instagram-filled-100 (1).png" alt="instagram filled icon">
+
+                            <img src="img/icons8-instagram-filled-100(1).png" alt="instagram filled icon">
                             <p class="roundedBorders">14 услуг</p>
                         </div>
                     </a>
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-telegram-plane fa-2x"></i> -->
+
                             <img src="img/icons8-telegram-app-96.png" alt="Telegram filled icon in circle">
                             <p class="roundedBorders">6 услуг</p>
                         </div>
                     </a>
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-facebook-square fa-2x"></i> -->
+
                             <img src="img/icons8-facebook-circled-filled-100.png"
                                 alt=" Facebook filled chat icon in circle">
                             <p class="roundedBorders">9 услуг</p>
@@ -184,7 +184,7 @@
                     </a>
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-twitter-square fa-2x"></i> -->
+
                             <img src="img/icons8-twitter-circled-filled-100.png"
                                 alt="Twitter filled chat icon in circle">
                             <p class="roundedBorders">9 услуг</p>
@@ -192,14 +192,14 @@
                     </a>
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-twitch fa-2x"></i> -->
+
                             <img src="img/icons8-twitch-filled-100.png" alt="Twitch filled icon">
                             <p class="roundedBorders">1 услуг</p>
                         </div>
                     </a>
                     <a href="#">
                         <div class="socialMedia">
-                            <!-- <i class="fab fa-odnoklassniki fa-2x"></i> -->
+
                             <img src="img/icons8-odnoklassniki-circled-filled-100.png"
                                 alt="Classmates (odnoklassniki) filled  icon in circle">
                             <p class="roundedBorders">8 услуг</p>
@@ -378,7 +378,7 @@
                     <hr>
 
                     <div class="supportOptionsItem">
-                        <img src="img/Group 2.png" alt="Viber icon in circle">
+                        <img src="img/Group2.png" alt="Viber icon in circle">
                         <h5>Viber</h5>
                         <p>Получите консультацию через одно из самых популярных приложений</p>
                     </div>
@@ -394,7 +394,7 @@
                     <hr>
                     <div class="supportOptionsItem">
 
-                        <img src="img/Group 3.png" alt="Binder icon in circle">
+                        <img src="img/Group3.png" alt="Binder icon in circle">
                         <h5>FAQ</h5>
                         <p>База самых распространенны х вопросов по работе с сервисом</p>
 
@@ -480,7 +480,7 @@
     </script>
 
     <!-- BEGIN JIVOSITE CODE {literal} -->
-    <script type='text/javascript'>
+    <script>
         (function () {
             var widget_id = 'BUVjD8v2M4';
             var d = document;
