removed type='text/javascript
w3c validator recomends attribute is unnecessary for JavaScript resources.

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
     </script>
 
     <!-- BEGIN JIVOSITE CODE {literal} -->
-    <script type='text/javascript'>
+    <script>
         (function () {
             var widget_id = 'BUVjD8v2M4';
             var d = document;
