fixed buttons and with attribute for image

--- a/Услуги.html
+++ b/Услуги.html
@@ -86,7 +86,7 @@
                 <h1>Сделай <br>
                     раскрутку аккаунта <br>
                     <b>SMMBot ONLINE</b></h1><br>
-                <a href="#"> <button class="btn"> <span>Подробнее</span></button></a>
+                <a href="#" class="btn"> <span>Подробнее</span></a>
 
             </div>
         </div>
@@ -106,7 +106,7 @@
                             <p>Подключение к телеграм-биржам</p>
                             <p>Примерный срок окупаемости: 4 месяца</p>
                         </div>
-                        <a href="#"><button class="btn">Заказать</button></a>
+                        <a href="#" class="btn">Заказать</a>
                     </div>
 
                     <div class="card">
@@ -122,7 +122,7 @@
                             <p>Продвижение вашего канала с
                                 помощью наших партнеров (взаимопиар)</p>
                         </div>
-                        <a href="#"> <button class="btn">Заказать</button></a>
+                        <a href="#" class="btn">Заказать</a>
                     </div>
 
                     <div class="card">
@@ -136,7 +136,7 @@
                             <p>Возможность ведения канала
                                 под ключ</p>
                         </div>
-                        <a href="#"><button class="btn">Заказать</button></a>
+                        <a href="#" class="btn">Заказать</a>
                     </div>
 
                 </div>
@@ -226,7 +226,7 @@
                                     <p>Подписчики на канал Телеграм.
                                         Быстрое добавление подписчиков.</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
 
@@ -243,7 +243,7 @@
                                         живые и активные,
                                         быстрое добавление и большая база.</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
 
@@ -260,7 +260,7 @@
                                         Высокая скорость подписки,
                                         вероятность списания.</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
 
@@ -275,14 +275,13 @@
                                     <p>Быстрое и дешевое добавление лайков
                                         на указанные фото в Instagram</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
 
                         <div class="item">
                             <div class="cardWithImages">
-                                <img src="img/likes.jpg" alt="Комментарии" title="Комментарии" width="299px"
-                                    height="120px">
+                                <img src="img/likes.jpg" alt="Комментарии" title="Комментарии" />
                                 <hr>
                                 <div class="contained-text">
                                     <h3>Комментарии</h3>
@@ -292,7 +291,7 @@
                                         высокая скорость
                                         выполнения.</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
 
@@ -309,7 +308,7 @@
                                         скорость по добавлению
                                         просмотров</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
 
@@ -325,7 +324,7 @@
                                     <p>Очень быстрые просмотры, база просмотров в несколько
                                         миллионов</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
 
@@ -341,7 +340,7 @@
                                     <p>Просмотры видео с охватом. Средняя скорость добавления
                                         просмотров.</p>
                                 </div>
-                                <a href="#"> <button class="btn">Заказать</button></a>
+                                <a href="#" class="btn">Заказать</a>
                             </div>
                         </div>
                     </div>
