added animation to pages for extetics

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/assets/owl.carousel.min.css" type="text/css" />
     <link rel="stylesheet" href="dist/assets/owl.theme.default.css" type="text/css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/inter.css" type="text/css" />
 
@@ -110,7 +111,7 @@
                 <h2>Система SMMBot.Online предлагает вам зарабатывать вместе</h2>
 
                 <div class="threeCards">
-                    <div class="card">
+                    <div class="card" data-aos="fade-up">
                         <h3>Пакет бизнес</h3>
                         <hr>
                         <div class="cardParag">
@@ -137,7 +138,7 @@
                             Подробнее</a>
                     </div>
 
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-duration="2000">
                         <h3>Пакет бизнес +</h3>
                         <hr>
                         <div class="cardParag">
@@ -166,7 +167,7 @@
                             Подробнее</a>
                     </div>
 
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-duration="3000">
                         <h3>Пакет индивидуал</h3>
                         <hr>
                         <div class="cardParag">
@@ -201,35 +202,35 @@
                 <h2>Выберите что будем раскручивать?</h2>
                 <div class="socials">
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-vk-circled-filled-100.png" alt="VK chat icon in circle">
                             <p class="roundedBorders">8 услуг</p>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-youtube-filled-100.png" alt="Youtbe filled icon">
                             <p class="roundedBorders">4 услуг</p>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-instagram-filled-100(1).png" alt="instagram filled icon">
                             <p class="roundedBorders">14 услуг</p>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-telegram-app-96.png" alt="Telegram filled icon in circle">
                             <p class="roundedBorders">6 услуг</p>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-facebook-circled-filled-100.png"
                                 alt=" Facebook filled chat icon in circle">
@@ -237,7 +238,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-twitter-circled-filled-100.png"
                                 alt="Twitter filled chat icon in circle">
@@ -245,14 +246,14 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-twitch-filled-100.png" alt="Twitch filled icon">
                             <p class="roundedBorders">1 услуг</p>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="socialMedia">
+                        <div class="socialMedia" data-aos="flip-left">
 
                             <img src="img/icons8-odnoklassniki-circled-filled-100.png"
                                 alt="Classmates (odnoklassniki) filled  icon in circle">
@@ -571,8 +572,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="dist/owl.carousel.min.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
     <script>
         $(document).ready(function () {
